--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tremor/react": "^3.11.0",
+    "@tremor/react": "^3.11.1",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "crypto-js": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.0",
