--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tremor/react": "^3.13.3",
+    "@vitejs/plugin-legacy": "^5.3.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "crypto-js": "^4.2.0",
