--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@headlessui/tailwindcss": "^0.2.0",
     "@tremor/react": "^3.14.1",
     "@vitejs/plugin-legacy": "^5.3.1",
     "axios": "^1.6.7",
@@ -24,7 +26,9 @@
     "react-spinners": "^0.13.8"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/crypto-js": "^4.2.1",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
@@ -35,7 +39,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.1.4"
   }
