--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "crypto-js": "^4.2.0",
+    "firebase": "^10.11.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
