--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.2",
     "crypto-js": "^4.2.0",
     "firebase": "^10.11.1",
+    "jotai": "^2.8.4",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
