--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@million/lint": "^1.0.0-rc.76",
     "@tremor/react": "^3.16.2",
     "@vitejs/plugin-legacy": "^5.3.1",
     "axios": "^1.7.2",
